WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305308
Fix typo in InlineContentBuilder::handlePartialDisplayContentUpdate()
https://bugs.webkit.org/show_bug.cgi?id=305308
Summary
Fix typo in InlineContentBuilder::handlePartialDisplayContentUpdate()
Chris Dumez
Reported
2026-01-11 23:33:19 PST
Fix typo in InlineContentBuilder::handlePartialDisplayContentUpdate().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-11 23:34:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56436
EWS
Comment 2
2026-01-12 16:27:36 PST
Committed
305485@main
(6dd68b7b2c68): <
https://commits.webkit.org/305485@main
> Reviewed commits have been landed. Closing PR #56436 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-12 16:28:14 PST
<
rdar://problem/168025635
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug