Fix typo in InlineContentBuilder::handlePartialDisplayContentUpdate() https://bugs.webkit.org/show_bug.cgi?id=305308

Reviewed by Adrian Perez de Castro.

* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp:
(WebCore::LayoutIntegration::InlineContentBuilder::handlePartialDisplayContentUpdate const):

Canonical link: https://commits.webkit.org/305485@main