Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp
@@ -287,17 +287,17 @@ FloatRect InlineContentBuilder::handlePartialDisplayContentUpdate(Layout::Inline
         auto& displayContentFromPreviousLayout = inlineContent.displayContent();
         if (!lineDamage || !lineDamage->layoutStartPosition() || !displayContentFromPreviousLayout.lines.size())
             return { };
-        auto canidateLineIndex = lineDamage->layoutStartPosition()->lineIndex;
-        if (canidateLineIndex >= displayContentFromPreviousLayout.lines.size()) {
+        auto candidateLineIndex = lineDamage->layoutStartPosition()->lineIndex;
+        if (candidateLineIndex >= displayContentFromPreviousLayout.lines.size()) {
             ASSERT_NOT_REACHED();
             return { };
         }
-        if (layoutResult.displayContent.boxes.size() && canidateLineIndex > layoutResult.displayContent.boxes[0].lineIndex()) {
+        if (layoutResult.displayContent.boxes.size() && candidateLineIndex > layoutResult.displayContent.boxes[0].lineIndex()) {
             // We should never generate lines _before_ the damaged line.
             ASSERT_NOT_REACHED();
             return { };
         }
-        return { canidateLineIndex };
+        return { candidateLineIndex };
     }();
 
     auto firstDamagedBoxIndex = [&]() -> std::optional<size_t> {
@@ -310,15 +310,15 @@ FloatRect InlineContentBuilder::handlePartialDisplayContentUpdate(Layout::Inline
             return { };
         auto& displayContentFromPreviousLayout = inlineContent.displayContent();
         ASSERT(layoutResult.range != Layout::InlineLayoutResult::Range::Full);
-        auto canidateLineCount = layoutResult.range == Layout::InlineLayoutResult::Range::FullFromDamage
+        auto candidateLineCount = layoutResult.range == Layout::InlineLayoutResult::Range::FullFromDamage
             ? displayContentFromPreviousLayout.lines.size() - *firstDamagedLineIndex
             : layoutResult.displayContent.lines.size();
 
-        if (*firstDamagedLineIndex + canidateLineCount > displayContentFromPreviousLayout.lines.size()) {
+        if (*firstDamagedLineIndex + candidateLineCount > displayContentFromPreviousLayout.lines.size()) {
             ASSERT_NOT_REACHED();
             return { };
         }
-        return { canidateLineCount };
+        return { candidateLineCount };
     }();
 
     auto numberOfDamagedBoxes = [&]() -> std::optional<size_t> {
